--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="brand-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
         <span class="brand-text">
           <span class="brand-name">Mattsson Aviation AS</span>
-          <span class="brand-tag">Brannfly • Fire Boss</span>
+          <span class="brand-tag">Konsulenttjenester • Flypilot</span>
         </span>
       </a>
 
