--- a/profil.html
+++ b/profil.html
@@ -20,7 +20,7 @@
         <img class="brand-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
         <span class="brand-text">
           <span class="brand-name">Mattsson Aviation AS</span>
-          <span class="brand-tag">Konsulentvirksomhet innen luftfart • Peter Mattsson</span>
+          <span class="brand-tag">Konsulenttjenester • Flypilot</span>
         </span>
       </a>
 
