la til fly animasjon

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 <body>
   <a class="skip" href="#main">Hopp til innhold</a>
 
+<div class="loader" id="loader" aria-hidden="true">
+  <div class="loader-inner">
+    <div class="trail" aria-hidden="true"></div>
+
+    <!-- din plane (img eller svg) -->
+    <svg class="plane" width="70" height="70" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M21 16v-2l-8-5V3.5a1.5 1.5 0 0 0-3 0V9l-8 5v2l8-2.5V19l-2 1.5V22l3-1 3 1v-1.5L13 19v-5.5l8 2.5z"
+            fill="currentColor"/>
+    </svg>
+  </div>
+</div>
+
+
+
+
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Til forsiden">
