Større endringer på nettsiden

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Til forsiden">
-        <img class="brand-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="brand-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <span class="brand-text">
           <span class="brand-name">Mattsson Aviation AS</span>
           <span class="brand-tag">Konsulenttjenester • Flypilot</span>
@@ -56,32 +56,25 @@
     <!-- HERO -->
     <section class="hero hero-image">
       <div class="hero-bg" aria-hidden="true">
-        <img src="fireboss-saab.jpg" alt="" />
+        <img src="firebossinaction.jpg" alt="" />
       </div>
 
       <div class="container hero-content">
         <div class="hero-split">
           <div class="hero-text">
-            <p class="kicker">Brannflypilot • Sverige / Norden</p>
             <h1>Peter Mattsson</h1>
 
 <p class="lead">
   Mattsson Aviation AS er et norsk konsulentselskap innen luftfart, eid og drevet av Peter Mattsson.
-  Gjennom selskapet er jeg utleid til SAAB i Sverige, der jeg flyr Fire Boss (AT-802) i oppdrag knyttet til
-  EU-kommisjonens beredskap.
+  Gjennom selskapet er jeg utleid som brannflypilot i Europa.
 </p>
 
-<p class="lead">
-  Jeg bor i Norge og jobber hovedsakelig fra Nyköping i Sverige. Luftfart har vært en rød tråd gjennom hele livet mitt,
-  med erfaring fra privat og kommersiell flyging – i tillegg til operativ brannflyging. Arbeidet handler om presisjon,
-  sikkerhet og gode beslutninger når det virkelig gjelder.
-</p>
 
 
             <div class="hero-metrics" role="list">
               <div class="metric" role="listitem">
                 <div class="metric-value">Operativ beredskap</div>
-                <div class="metric-label">Fire Boss for SAAB • EU-oppdrag</div>
+                <div class="metric-label">Fire Boss • Brannflypilot</div>
               </div>
               <div class="metric" role="listitem">
                 <div class="metric-value">Bred flyerfaring</div>
@@ -97,14 +90,6 @@
               Se de ulike sidene for mer om erfaring, sertifiseringer og utvalgte oppdrag.
             </p>
           </div>
-
-          <aside class="hero-photo" aria-label="Portrett">
-            <img class="portrait" src="peter_fb.jpg" alt="Portrett av Peter Mattsson" />
-            <div class="portrait-caption">
-              <div class="pc-title">Peter Mattsson</div>
-              <div class="pc-sub">Fire Boss (AT-802) • SAAB Group AB</div>
-            </div>
-          </aside>
         </div>
       </div>
     </section>
@@ -119,7 +104,7 @@
           <article class="card">
             <h3>Profil</h3>
             <p>
-              Hvem jeg er, hvordan jeg jobber og hvordan luftfart har formet både yrkesvalg og hverdag.
+              Om Mattsson Aviation AS
             </p>
             <p style="margin-top:10px;">
               <a class="btn ghost" href="profil.html">Åpne profil</a>
@@ -137,12 +122,12 @@
           </article>
 
           <article class="card">
-            <h3>Sertifiseringer</h3>
+            <h3>Kontakt</h3>
             <p>
-              Sertifikater, godkjenninger og kompetanse som ligger til grunn for sikker operativ flyging.
+              Klikk her for å komme i kontakt med meg.
             </p>
             <p style="margin-top:10px;">
-              <a class="btn ghost" href="sertifiseringer.html">Åpne sertifiseringer</a>
+              <a class="btn ghost" href="kontakt.html">Åpne kontakt</a>
             </p>
           </article>
         </div>
@@ -153,10 +138,10 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div class="footer-left">
-        <img class="footer-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="footer-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <div class="footer-text">
           <div class="footer-title">Mattsson Aviation AS</div>
-          <div class="footer-sub">Brannfly • Operativ luftfart</div>
+          <div class="footer-sub">Konsulenttjenester • Flypilot</div>
         </div>
       </div>
 
