--- a/kontakt.html
+++ b/kontakt.html
@@ -24,10 +24,11 @@
 </div>
 
 
+
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Til forsiden">
-        <img class="brand-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="brand-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <span class="brand-text">
           <span class="brand-name">Mattsson Aviation AS</span>
           <span class="brand-tag">Konsulenttjenester • Flypilot</span>
@@ -72,8 +73,8 @@
           
           <article class="contact-tile">
             <div class="contact-label">E-post</div>
-            <a class="contact-value" href="mailto:post@mattssonaviation.com">
-              peter@mattssonaviation.com
+            <a class="contact-value" href="mailto:boeing737peter@gmail.com">
+              boeing737peter@gmail.com
             </a>
             <div class="contact-note">
               Foretrukket kanal
@@ -108,10 +109,10 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div class="footer-left">
-        <img class="footer-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="footer-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <div class="footer-text">
           <div class="footer-title">Mattsson Aviation AS</div>
-          <div class="footer-sub">Brannfly • Operativ luftfart</div>
+          <div class="footer-sub">Konsulenttjenester • Flypilot</div>
         </div>
       </div>
 
