--- a/profil.html
+++ b/profil.html
@@ -24,10 +24,11 @@
 </div>
 
 
+
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Til forsiden">
-        <img class="brand-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="brand-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <span class="brand-text">
           <span class="brand-name">Mattsson Aviation AS</span>
           <span class="brand-tag">Konsulenttjenester • Flypilot</span>
@@ -53,30 +54,15 @@
         <div>
           <div class="section-head">
             <h2>Profil</h2>
-            <p>Kort om bakgrunn, arbeidsform og fokus i operativ luftfart.</p>
+            <p>Kort om Mattsson Aviation.</p>
           </div>
 
           <p>
             Mattsson Aviation AS er et norsk aksjeselskap som leverer konsulenttjenester innen luftfart, eid og drevet av
-            Peter Mattsson. Gjennom selskapet er Peter utleid til SAAB i Sverige, der han flyr Fire Boss (AT-802) i oppdrag
-            knyttet til EU-kommisjonens beredskap.
+            Peter Mattsson. Gjennom selskapet er jeg utleid som brannflypilot i Europa.
           </p>
 
-          <p>
-            Peter bor i Norge og jobber hovedsakelig ut fra Nyköping i Sverige. Luftfart har vært en rød tråd gjennom hele
-            livet – med erfaring fra privat og kommersiell flyging, samt operativ brannflyging. Arbeidet handler om å levere
-            stabilt og sikkert under varierende forhold, med høy presisjon og tydelig samhandling med øvrige ressurser i felt.
-          </p>
-
-          <p>
-            I operativ kontekst er arbeidsformen preget av disiplin i prosedyrer, kontinuerlig risikovurdering og gode beslutninger
-            når tid og marginer er små. For Peter er dette ikke “en rolle” ved siden av resten av livet – det er faget og hverdagen.
-          </p>
-
-          <p>
-            Dette nettstedet er laget som et ryddig innblikk i erfaring, ansvar og kompetanse, og som et utgangspunkt for dialog ved
-            relevante henvendelser.
-          </p>
+          <img src="mlogov2.png" alt="Fire Boss" />
         </div>
 
         <aside class="profile-box" aria-label="Kjapp oversikt">
@@ -94,30 +80,20 @@
           </div>
           <div class="profile-row">
             <span class="label">Nåværende oppdrag</span>
-            <span class="value">Utleid til SAAB (Sverige)</span>
+            <span class="value">Brannflypilot</span>
           </div>
           <div class="profile-row">
-            <span class="label">Rolle</span>
+            <span class="label">Flytype</span>
             <span class="value">Fire Boss / AT-802</span>
           </div>
           <div class="profile-row">
-            <span class="label">Base</span>
-            <span class="value">Norge • Nyköping (Sverige)</span>
-          </div>
-          <div class="profile-row">
             <span class="label">Språk</span>
-            <span class="value">Norsk • Svensk • Engelsk</span>
+            <span class="value">Svensk • Norsk • Engelsk</span>
           </div>
           <div class="profile-row">
             <span class="label">Operasjonsområde</span>
             <span class="value">Sverige / Norden / Europa</span>
           </div>
-
-          <div class="divider"></div>
-
-          <p class="small">
-            Nøkkeltall, flytyper og ratinger kan listes under Sertifiseringer for å holde profilen kort og ryddig.
-          </p>
         </aside>
       </div>
     </section>
@@ -126,10 +102,10 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div class="footer-left">
-        <img class="footer-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="footer-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <div class="footer-text">
           <div class="footer-title">Mattsson Aviation AS</div>
-          <div class="footer-sub">Konsulentvirksomhet innen luftfart</div>
+          <div class="footer-sub">Konsulenttjenester • Flypilot</div>
         </div>
       </div>
 
