--- a/erfaring.html
+++ b/erfaring.html
@@ -24,10 +24,11 @@
 </div>
 
 
+
   <header class="site-header" id="top">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Til forsiden">
-        <img class="brand-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="brand-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <span class="brand-text">
           <span class="brand-name">Mattsson Aviation AS</span>
           <span class="brand-tag">Konsulenttjenester • Flypilot</span>
@@ -61,34 +62,12 @@
               <span class="pill">Nå</span>
               <span class="muted">Operativ pilot (Sverige)</span>
             </div>
-            <h3>SAAB Aerial Firefighting / Sverige</h3>
+            <h3>Aerial Firefighting / Europa</h3>
             <p>
-              Brannflyrelaterte operasjoner med ansvar for planlegging og gjennomføring i tråd med prosedyrer.
-              Legg inn flytype(r), typiske scenarier og nøkkelansvar.
+            
             </p>
           </article>
 
-          <article class="timeline-item">
-            <div class="timeline-meta">
-              <span class="pill">Tidligere</span>
-              <span class="muted">Norge / OSL</span>
-            </div>
-            <h3>SAS Scandinavian Airlines / Pilot</h3>
-            <p>
-              Mellomdistanseflyvninger i Europa. Flydd Boeing 737 og Airbus A320.
-            </p>
-          </article>
-
-          <article class="timeline-item">
-            <div class="timeline-meta">
-              <span class="pill">Bakgrunn</span>
-              <span class="muted">Utdanning / sertifiseringsløp</span>
-            </div>
-            <h3>[Utdanning / sivil / militær]</h3>
-            <p>
-              Kort om grunnlaget og milepæler.
-            </p>
-          </article>
         </div>
       </div>
     </section>
@@ -97,10 +76,10 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div class="footer-left">
-        <img class="footer-logo" src="mattssonavi_transpa.png" alt="Mattsson Aviation" />
+        <img class="footer-logo" src="mlogov2.png" alt="Mattsson Aviation" />
         <div class="footer-text">
           <div class="footer-title">Mattsson Aviation AS</div>
-          <div class="footer-sub">Brannflypilot | Portefølje</div>
+          <div class="footer-sub">Konsulenttjenester • Flypilot</div>
         </div>
       </div>
 
